:icons: font
:source-highlighter: pygments
:nofooter:
link:index.html[Home]

== Mouseless Changelog


## 1.4.5

  . Added jumplist feature #553 (`previousScrollPosition` is `<C-o>` and `nextScrollPosition` is `<C-i>`).
  . Fixed toggling bookmarks saving url as title and added `toggleWindowBookmarks` as a fixup for already saved bookmarks.
   load all bookmarks in a window and use the command

## 1.4.4

  . Fixed #547 site mapping being overwritten
  . Merged refactored code for domain history switching
  . Merged frame/port changes 
  . Fixed editWithVim ajax injection using cross origin domain. Python server can no longer run any unix command. VIM_COMMAND only

## 1.4.3

  . Fixed #529 buffers search 
  . Fixed #115 #114 errors when creating new tab
  . Fixed #108 pasting urls starting by a space now gets trimmed
  . Fixed documentation commands.adoc search commands
  . Fixed #117 C-w works in insert mode (deletes previous word) and in normal mode (closes tab) -- experimental settings must be enabled
  . Fixed #121 toggleIncognitoWindow toggleIncognitoTab commands

## 1.4.2

  . Fixed #107 regression from 0e249e0b1b96f43ee06803bc9c23e01114374990


## 1.4.1

  . Merged changes
  .. workaround for Chrome collapseToEnd() bug #527 - command bar focus

  

## 1.4.0

  . Merged changes
  .. fix 819232726ea22e90c317f9e4487f12eff19f172d #516 pegjs single line comment issue
  .. Changed buffers priority 
  .. Fixed CSS Options 
  .. A lot of refactoring in 7031222822f3e5389f8ad594c54cf9e8e3f18b33 and 43e5a6bbf79468f56d68274e84f18adfa2f3c45d
  .. Removing reverse image change
  .. Reverted pull #502
  .. added view source command with chrome extension keyboard shortcut
  .. improvements to parser - multi-line arrays and multi-dimensional, variable referencing
  .. major changes to hints - new site filters format (view doc), removed experimental settings introduced in #17 while retaining functionality
  .. fix to incremental search #524