@@ -504,105 +504,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_1_4_5">1.4.5</h2>
-<div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Added jumplist feature #553 (<code>previousScrollPosition</code> is <code>&lt;C-o&gt;</code> and <code>nextScrollPosition</code> is <code>&lt;C-i&gt;</code>).</p>
-</li>
-<li>
-<p>Fixed toggling bookmarks saving url as title and added <code>toggleWindowBookmarks</code> as a fixup for already saved bookmarks.
-load all bookmarks in a window and use the command</p>
-</li>
-<li>
-<p>Fixed #572 preventing anyone from sending keyboard events to extension via JS</p>
-</li>
-</ol>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_1_4_4">1.4.4</h2>
-<div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Fixed #547 site mapping being overwritten</p>
-</li>
-<li>
-<p>Merged refactored code for domain history switching</p>
-</li>
-<li>
-<p>Merged frame/port changes</p>
-</li>
-<li>
-<p>Fixed editWithVim ajax injection using cross origin domain. Python server can no longer run any unix command. VIM_COMMAND only</p>
-</li>
-</ol>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_1_4_3">1.4.3</h2>
-<div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Fixed #529 buffers search</p>
-</li>
-<li>
-<p>Fixed #115 #114 errors when creating new tab</p>
-</li>
-<li>
-<p>Fixed #108 pasting urls starting by a space now gets trimmed</p>
-</li>
-<li>
-<p>Fixed documentation commands.adoc search commands</p>
-</li>
-<li>
-<p>Fixed #117 C-w works in insert mode (deletes previous word) and in normal mode (closes tab)&#8201;&#8212;&#8201;experimental settings must be enabled</p>
-</li>
-<li>
-<p>Fixed #121 toggleIncognitoWindow toggleIncognitoTab commands</p>
-</li>
-</ol>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_1_4_2">1.4.2</h2>
-<div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Fixed #107 regression from 0e249e0b1b96f43ee06803bc9c23e01114374990</p>
-</li>
-</ol>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_1_4_1">1.4.1</h2>
-<div class="sectionbody">
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>Merged changes</p>
-<div class="olist loweralpha">
-<ol class="loweralpha" type="a">
-<li>
-<p>workaround for Chrome collapseToEnd() bug #527 - command bar focus</p>
-</li>
-</ol>
-</div>
-</li>
-</ol>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_1_4_0">1.4.0</h2>
+<h2 id="_1_3_4">1.3.4</h2>
 <div class="sectionbody">
 <div class="olist arabic">
 <ol class="arabic">
@@ -618,30 +520,6 @@ load all bookmarks in a window and use the command</p>
 </li>
 <li>
 <p>Fixed CSS Options</p>
-</li>
-<li>
-<p>A lot of refactoring in 7031222822f3e5389f8ad594c54cf9e8e3f18b33 and 43e5a6bbf79468f56d68274e84f18adfa2f3c45d</p>
-</li>
-<li>
-<p>Removing reverse image change</p>
-</li>
-<li>
-<p>Reverted pull #502</p>
-</li>
-<li>
-<p>added view source command with chrome extension keyboard shortcut</p>
-</li>
-<li>
-<p>improvements to parser - multi-line arrays and multi-dimensional, variable referencing</p>
-</li>
-<li>
-<p>major changes to hints - new site filters format (view doc), removed experimental settings introduced in #17 while retaining functionality</p>
-</li>
-<li>
-<p>fix to incremental search #524</p>
-</li>
-<li>
-<p>added beginningOfLineOrSelectAll from tarao</p>
 </li>
 </ol>
 </div>
@@ -915,31 +793,7 @@ load all bookmarks in a window and use the command</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_1_2_88">1.2.88</h2>
-<div class="sectionbody">
-<div class="ulist">
-<ul>
-<li>
-<p>Fix issue with <code>:buffer</code> command</p>
-</li>
-</ul>
-</div>
-</div>
-</div>
-<div class="sect1">
 <h2 id="_1_2_86">1.2.86</h2>
-<div class="sectionbody">
-<div class="ulist">
-<ul>
-<li>
-<p>Fix input box issues with new versions of Chrome</p>
-</li>
-</ul>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_1_2_86_2">1.2.86</h2>
 <div class="sectionbody">
 <div class="ulist">
 <ul>
